parser.output
Terminals unused in grammar

    ENTRY
    BREAK
    CONTINUE


State 89 conflicts: 2 reduce/reduce
State 134 conflicts: 1 reduce/reduce


Grammar

    0 $accept: underscore $end

    1 underscore: %empty
    2           | underscore func

    3 $@1: %empty

    4 func: FUNCTIONDECLARE ret ID $@1 "(" params_eps ")" body

    5 ret: %empty
    6    | srt
    7    | crt

    8 srt: NUMBERDECLARE
    9    | STRINGDECLARE
   10    | BOOLEENDECLARE

   11 crt: TABLEDECLARE
   12    | STRUCTTYPEDECLARE

   13 params_eps: %empty
   14           | params

   15 params: param comma_params

   16 comma_params: %empty
   17             | "," params

   18 param: type_declare ID

   19 body: "{" bloc "}"

   20 bloc: statement bloc
   21     | %empty

   22 statement: declare ";"

   23 $@2: %empty

   24 statement: STRUCTTYPEDECLARE ID $@2 "{" struct_fields "}" ";"
   25          | assign ";"
   26          | LOOP "(" expression ")" "{" bloc "}"
   27          | LOOP "(" assign ";" expression ";" assign ")" "{" bloc "}"
   28          | LOOP "(" init_declare ";" expression ";" assign ")" "{" bloc "}"
   29          | ifstmt
   30          | ifstmt elsestmt
   31          | ifstmt elifstmt
   32          | ifstmt elifstmt elsestmt
   33          | RETURN expression ";"

   34 $@3: %empty

   35 statement: ID "(" $@3 ")" ";"

   36 $@4: %empty

   37 statement: ID "(" $@4 call_param ")" ";"

   38 $@5: %empty

   39 statement: READ "(" ID $@5 ")" ";"
   40          | WRITE "(" expression ")" ";"

   41 type_declare: NUMBERDECLARE
   42             | STRINGDECLARE
   43             | CONSTDECLARE NUMBERDECLARE
   44             | CONSTDECLARE STRINGDECLARE
   45             | BOOLEENDECLARE
   46             | POINTERDECLARE
   47             | TABLEDECLARE
   48             | STRUCTDECLARE

   49 just_declare: type_declare ID

   50 init_declare: just_declare ASSIGNMENT expression

   51 declare: just_declare
   52        | init_declare

   53 struct_fields: type_declare ID

   54 $@6: %empty

   55 struct_fields: type_declare ID $@6 "," struct_fields
   56              | %empty

   57 assign: var ASSIGNMENT expression

   58 $@7: %empty

   59 assign: ID $@7 "[" expression "]" ASSIGNMENT expression
   60       | "&" var ASSIGNMENT expression
   61       | "@" var ASSIGNMENT expression

   62 ifstmt: IF "(" expression ")" body

   63 elifstmt: ELSE "(" expression ")" body
   64         | elifstmt ELSE "(" expression ")" body

   65 elsestmt: ELSE "(" ")" body

   66 call_param: expression
   67           | expression "," call_param

   68 accessfield: ID
   69            | ID "." accessfield

   70 var: ID

   71 $@8: %empty

   72 var: ID $@8 "." accessfield

   73 expression: "(" expression ")"
   74           | "!" expression
   75           | "@" var_exp
   76           | "&" var_exp
   77           | expression "=" expression
   78           | expression "!=" expression
   79           | expression "||" expression
   80           | expression "&&" expression
   81           | expression "<" expression
   82           | expression "<=" expression
   83           | expression ">" expression
   84           | expression ">=" expression
   85           | expression "+" expression
   86           | expression "-" expression
   87           | expression "*" expression
   88           | expression "/" expression
   89           | expression "%" expression
   90           | expression "^" expression
   91           | const
   92           | variable

   93 const: INTEGER
   94      | REALNUMBER
   95      | STRING
   96      | TRUE
   97      | FALSE

   98 variable: var_exp

   99 $@9: %empty

  100 variable: ID "(" $@9 call_param ")"

  101 $@10: %empty

  102 variable: ID "(" $@10 ")"

  103 var_exp: ID

  104 $@11: %empty

  105 var_exp: ID $@11 "." accessfield

  106 $@12: %empty

  107 var_exp: ID $@12 "[" expression "]"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ENTRY (258)
    LOOP (259) 26 27 28
    IF (260) 62
    ELSE (261) 63 64 65
    READ (262) 39
    WRITE (263) 40
    BREAK (264)
    CONTINUE (265)
    ID <token_type> (266) 4 18 24 35 37 39 49 53 55 59 68 69 70 72 100 102 103 105 107
    FUNCTIONDECLARE <string> (267) 4
    NUMBERDECLARE <string> (268) 8 41 43
    STRINGDECLARE <string> (269) 9 42 44
    CONSTDECLARE <string> (270) 43 44
    BOOLEENDECLARE <string> (271) 10 45
    STRUCTTYPEDECLARE <string> (272) 12 24
    STRUCTDECLARE <string> (273) 48
    TABLEDECLARE <string> (274) 11 47
    POINTERDECLARE <string> (275) 46
    "&" (276) 60 76
    "@" (277) 61 75
    "{" (278) 19 24 26 27 28
    "}" (279) 19 24 26 27 28
    "(" (280) 4 26 27 28 35 37 39 40 62 63 64 65 73 100 102
    ")" (281) 4 26 27 28 35 37 39 40 62 63 64 65 73 100 102
    "[" (282) 59 107
    "]" (283) 59 107
    "=" (284) 77
    "!=" (285) 78
    "&&" (286) 80
    "||" (287) 79
    "!" (288) 74
    "<" (289) 81
    ">" (290) 83
    "<=" (291) 82
    ">=" (292) 84
    "+" (293) 85
    "-" (294) 86
    "*" (295) 87
    "/" (296) 88
    "%" (297) 89
    "^" (298) 90
    "." (299) 69 72 105
    "," (300) 17 55 67
    ";" (301) 22 24 25 27 28 33 35 37 39 40
    ASSIGNMENT (302) 50 57 59 60 61
    RETURN (303) 33
    INTEGER (304) 93
    REALNUMBER (305) 94
    STRING (306) 95
    TRUE (307) 96
    FALSE (308) 97


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    underscore (55)
        on left: 1 2
        on right: 0 2
    func (56)
        on left: 4
        on right: 2
    $@1 (57)
        on left: 3
        on right: 4
    ret (58)
        on left: 5 6 7
        on right: 4
    srt <string> (59)
        on left: 8 9 10
        on right: 6
    crt <string> (60)
        on left: 11 12
        on right: 7
    params_eps (61)
        on left: 13 14
        on right: 4
    params (62)
        on left: 15
        on right: 14 17
    comma_params (63)
        on left: 16 17
        on right: 15
    param (64)
        on left: 18
        on right: 15
    body (65)
        on left: 19
        on right: 4 62 63 64 65
    bloc (66)
        on left: 20 21
        on right: 19 20 26 27 28
    statement (67)
        on left: 22 24 25 26 27 28 29 30 31 32 33 35 37 39 40
        on right: 20
    $@2 (68)
        on left: 23
        on right: 24
    $@3 (69)
        on left: 34
        on right: 35
    $@4 (70)
        on left: 36
        on right: 37
    $@5 (71)
        on left: 38
        on right: 39
    type_declare <string> (72)
        on left: 41 42 43 44 45 46 47 48
        on right: 18 49 53 55
    just_declare <string> (73)
        on left: 49
        on right: 50 51
    init_declare (74)
        on left: 50
        on right: 28 52
    declare (75)
        on left: 51 52
        on right: 22
    struct_fields <string> (76)
        on left: 53 55 56
        on right: 24 55
    $@6 (77)
        on left: 54
        on right: 55
    assign (78)
        on left: 57 59 60 61
        on right: 25 27 28
    $@7 (79)
        on left: 58
        on right: 59
    ifstmt (80)
        on left: 62
        on right: 29 30 31 32
    elifstmt (81)
        on left: 63 64
        on right: 31 32 64
    elsestmt (82)
        on left: 65
        on right: 30 32
    call_param (83)
        on left: 66 67
        on right: 37 67 100
    accessfield (84)
        on left: 68 69
        on right: 69 72 105
    var (85)
        on left: 70 72
        on right: 57 60 61
    $@8 (86)
        on left: 71
        on right: 72
    expression (87)
        on left: 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92
        on right: 26 27 28 33 40 50 57 59 60 61 62 63 64 66 67 73 74 77 78 79 80 81 82 83 84 85 86 87 88 89 90 107
    const (88)
        on left: 93 94 95 96 97
        on right: 91
    variable (89)
        on left: 98 100 102
        on right: 92
    $@9 (90)
        on left: 99
        on right: 100
    $@10 (91)
        on left: 101
        on right: 102
    var_exp (92)
        on left: 103 105 107
        on right: 75 76 98
    $@11 (93)
        on left: 104
        on right: 105
    $@12 (94)
        on left: 106
        on right: 107


State 0

    0 $accept: . underscore $end
    1 underscore: . %empty
    2           | . underscore func

    $default  reduce using rule 1 (underscore)

    underscore  go to state 1


State 1

    0 $accept: underscore . $end
    2 underscore: underscore . func
    4 func: . FUNCTIONDECLARE ret ID $@1 "(" params_eps ")" body

    $end             shift, and go to state 2
    FUNCTIONDECLARE  shift, and go to state 3

    func  go to state 4


State 2

    0 $accept: underscore $end .

    $default  accept


State 3

    4 func: FUNCTIONDECLARE . ret ID $@1 "(" params_eps ")" body
    5 ret: . %empty  [ID]
    6    | . srt
    7    | . crt
    8 srt: . NUMBERDECLARE
    9    | . STRINGDECLARE
   10    | . BOOLEENDECLARE
   11 crt: . TABLEDECLARE
   12    | . STRUCTTYPEDECLARE

    NUMBERDECLARE      shift, and go to state 5
    STRINGDECLARE      shift, and go to state 6
    BOOLEENDECLARE     shift, and go to state 7
    STRUCTTYPEDECLARE  shift, and go to state 8
    TABLEDECLARE       shift, and go to state 9

    $default  reduce using rule 5 (ret)

    ret  go to state 10
    srt  go to state 11
    crt  go to state 12


State 4

    2 underscore: underscore func .

    $default  reduce using rule 2 (underscore)


State 5

    8 srt: NUMBERDECLARE .

    $default  reduce using rule 8 (srt)


State 6

    9 srt: STRINGDECLARE .

    $default  reduce using rule 9 (srt)


State 7

   10 srt: BOOLEENDECLARE .

    $default  reduce using rule 10 (srt)


State 8

   12 crt: STRUCTTYPEDECLARE .

    $default  reduce using rule 12 (crt)


State 9

   11 crt: TABLEDECLARE .

    $default  reduce using rule 11 (crt)


State 10

    4 func: FUNCTIONDECLARE ret . ID $@1 "(" params_eps ")" body

    ID  shift, and go to state 13


State 11

    6 ret: srt .

    $default  reduce using rule 6 (ret)


State 12

    7 ret: crt .

    $default  reduce using rule 7 (ret)


State 13

    3 $@1: . %empty
    4 func: FUNCTIONDECLARE ret ID . $@1 "(" params_eps ")" body

    $default  reduce using rule 3 ($@1)

    $@1  go to state 14


State 14

    4 func: FUNCTIONDECLARE ret ID $@1 . "(" params_eps ")" body

    "("  shift, and go to state 15


State 15

    4 func: FUNCTIONDECLARE ret ID $@1 "(" . params_eps ")" body
   13 params_eps: . %empty  [")"]
   14           | . params
   15 params: . param comma_params
   18 param: . type_declare ID
   41 type_declare: . NUMBERDECLARE
   42             | . STRINGDECLARE
   43             | . CONSTDECLARE NUMBERDECLARE
   44             | . CONSTDECLARE STRINGDECLARE
   45             | . BOOLEENDECLARE
   46             | . POINTERDECLARE
   47             | . TABLEDECLARE
   48             | . STRUCTDECLARE

    NUMBERDECLARE   shift, and go to state 16
    STRINGDECLARE   shift, and go to state 17
    CONSTDECLARE    shift, and go to state 18
    BOOLEENDECLARE  shift, and go to state 19
    STRUCTDECLARE   shift, and go to state 20
    TABLEDECLARE    shift, and go to state 21
    POINTERDECLARE  shift, and go to state 22

    $default  reduce using rule 13 (params_eps)

    params_eps    go to state 23
    params        go to state 24
    param         go to state 25
    type_declare  go to state 26


State 16

   41 type_declare: NUMBERDECLARE .

    $default  reduce using rule 41 (type_declare)


State 17

   42 type_declare: STRINGDECLARE .

    $default  reduce using rule 42 (type_declare)


State 18

   43 type_declare: CONSTDECLARE . NUMBERDECLARE
   44             | CONSTDECLARE . STRINGDECLARE

    NUMBERDECLARE  shift, and go to state 27
    STRINGDECLARE  shift, and go to state 28


State 19

   45 type_declare: BOOLEENDECLARE .

    $default  reduce using rule 45 (type_declare)


State 20

   48 type_declare: STRUCTDECLARE .

    $default  reduce using rule 48 (type_declare)


State 21

   47 type_declare: TABLEDECLARE .

    $default  reduce using rule 47 (type_declare)


State 22

   46 type_declare: POINTERDECLARE .

    $default  reduce using rule 46 (type_declare)


State 23

    4 func: FUNCTIONDECLARE ret ID $@1 "(" params_eps . ")" body

    ")"  shift, and go to state 29


State 24

   14 params_eps: params .

    $default  reduce using rule 14 (params_eps)


State 25

   15 params: param . comma_params
   16 comma_params: . %empty  [")"]
   17             | . "," params

    ","  shift, and go to state 30

    $default  reduce using rule 16 (comma_params)

    comma_params  go to state 31


State 26

   18 param: type_declare . ID

    ID  shift, and go to state 32


State 27

   43 type_declare: CONSTDECLARE NUMBERDECLARE .

    $default  reduce using rule 43 (type_declare)


State 28

   44 type_declare: CONSTDECLARE STRINGDECLARE .

    $default  reduce using rule 44 (type_declare)


State 29

    4 func: FUNCTIONDECLARE ret ID $@1 "(" params_eps ")" . body
   19 body: . "{" bloc "}"

    "{"  shift, and go to state 33

    body  go to state 34


State 30

   15 params: . param comma_params
   17 comma_params: "," . params
   18 param: . type_declare ID
   41 type_declare: . NUMBERDECLARE
   42             | . STRINGDECLARE
   43             | . CONSTDECLARE NUMBERDECLARE
   44             | . CONSTDECLARE STRINGDECLARE
   45             | . BOOLEENDECLARE
   46             | . POINTERDECLARE
   47             | . TABLEDECLARE
   48             | . STRUCTDECLARE

    NUMBERDECLARE   shift, and go to state 16
    STRINGDECLARE   shift, and go to state 17
    CONSTDECLARE    shift, and go to state 18
    BOOLEENDECLARE  shift, and go to state 19
    STRUCTDECLARE   shift, and go to state 20
    TABLEDECLARE    shift, and go to state 21
    POINTERDECLARE  shift, and go to state 22

    params        go to state 35
    param         go to state 25
    type_declare  go to state 26


State 31

   15 params: param comma_params .

    $default  reduce using rule 15 (params)


State 32

   18 param: type_declare ID .

    $default  reduce using rule 18 (param)


State 33

   19 body: "{" . bloc "}"
   20 bloc: . statement bloc
   21     | . %empty  ["}"]
   22 statement: . declare ";"
   24          | . STRUCTTYPEDECLARE ID $@2 "{" struct_fields "}" ";"
   25          | . assign ";"
   26          | . LOOP "(" expression ")" "{" bloc "}"
   27          | . LOOP "(" assign ";" expression ";" assign ")" "{" bloc "}"
   28          | . LOOP "(" init_declare ";" expression ";" assign ")" "{" bloc "}"
   29          | . ifstmt
   30          | . ifstmt elsestmt
   31          | . ifstmt elifstmt
   32          | . ifstmt elifstmt elsestmt
   33          | . RETURN expression ";"
   35          | . ID "(" $@3 ")" ";"
   37          | . ID "(" $@4 call_param ")" ";"
   39          | . READ "(" ID $@5 ")" ";"
   40          | . WRITE "(" expression ")" ";"
   41 type_declare: . NUMBERDECLARE
   42             | . STRINGDECLARE
   43             | . CONSTDECLARE NUMBERDECLARE
   44             | . CONSTDECLARE STRINGDECLARE
   45             | . BOOLEENDECLARE
   46             | . POINTERDECLARE
   47             | . TABLEDECLARE
   48             | . STRUCTDECLARE
   49 just_declare: . type_declare ID
   50 init_declare: . just_declare ASSIGNMENT expression
   51 declare: . just_declare
   52        | . init_declare
   57 assign: . var ASSIGNMENT expression
   59       | . ID $@7 "[" expression "]" ASSIGNMENT expression
   60       | . "&" var ASSIGNMENT expression
   61       | . "@" var ASSIGNMENT expression
   62 ifstmt: . IF "(" expression ")" body
   70 var: . ID
   72    | . ID $@8 "." accessfield

    LOOP               shift, and go to state 36
    IF                 shift, and go to state 37
    READ               shift, and go to state 38
    WRITE              shift, and go to state 39
    ID                 shift, and go to state 40
    NUMBERDECLARE      shift, and go to state 16
    STRINGDECLARE      shift, and go to state 17
    CONSTDECLARE       shift, and go to state 18
    BOOLEENDECLARE     shift, and go to state 19
    STRUCTTYPEDECLARE  shift, and go to state 41
    STRUCTDECLARE      shift, and go to state 20
    TABLEDECLARE       shift, and go to state 21
    POINTERDECLARE     shift, and go to state 22
    "&"                shift, and go to state 42
    "@"                shift, and go to state 43
    RETURN             shift, and go to state 44

    $default  reduce using rule 21 (bloc)

    bloc          go to state 45
    statement     go to state 46
    type_declare  go to state 47
    just_declare  go to state 48
    init_declare  go to state 49
    declare       go to state 50
    assign        go to state 51
    ifstmt        go to state 52
    var           go to state 53


State 34

    4 func: FUNCTIONDECLARE ret ID $@1 "(" params_eps ")" body .

    $default  reduce using rule 4 (func)


State 35

   17 comma_params: "," params .

    $default  reduce using rule 17 (comma_params)


State 36

   26 statement: LOOP . "(" expression ")" "{" bloc "}"
   27          | LOOP . "(" assign ";" expression ";" assign ")" "{" bloc "}"
   28          | LOOP . "(" init_declare ";" expression ";" assign ")" "{" bloc "}"

    "("  shift, and go to state 54


State 37

   62 ifstmt: IF . "(" expression ")" body

    "("  shift, and go to state 55


State 38

   39 statement: READ . "(" ID $@5 ")" ";"

    "("  shift, and go to state 56


State 39

   40 statement: WRITE . "(" expression ")" ";"

    "("  shift, and go to state 57


State 40

   35 statement: ID . "(" $@3 ")" ";"
   37          | ID . "(" $@4 call_param ")" ";"
   58 $@7: . %empty  ["["]
   59 assign: ID . $@7 "[" expression "]" ASSIGNMENT expression
   70 var: ID .  [ASSIGNMENT]
   71 $@8: . %empty  ["."]
   72 var: ID . $@8 "." accessfield

    "("  shift, and go to state 58

    "."         reduce using rule 71 ($@8)
    ASSIGNMENT  reduce using rule 70 (var)
    $default    reduce using rule 58 ($@7)

    $@7  go to state 59
    $@8  go to state 60


State 41

   24 statement: STRUCTTYPEDECLARE . ID $@2 "{" struct_fields "}" ";"

    ID  shift, and go to state 61


State 42

   60 assign: "&" . var ASSIGNMENT expression
   70 var: . ID
   72    | . ID $@8 "." accessfield

    ID  shift, and go to state 62

    var  go to state 63


State 43

   61 assign: "@" . var ASSIGNMENT expression
   70 var: . ID
   72    | . ID $@8 "." accessfield

    ID  shift, and go to state 62

    var  go to state 64


State 44

   33 statement: RETURN . expression ";"
   73 expression: . "(" expression ")"
   74           | . "!" expression
   75           | . "@" var_exp
   76           | . "&" var_exp
   77           | . expression "=" expression
   78           | . expression "!=" expression
   79           | . expression "||" expression
   80           | . expression "&&" expression
   81           | . expression "<" expression
   82           | . expression "<=" expression
   83           | . expression ">" expression
   84           | . expression ">=" expression
   85           | . expression "+" expression
   86           | . expression "-" expression
   87           | . expression "*" expression
   88           | . expression "/" expression
   89           | . expression "%" expression
   90           | . expression "^" expression
   91           | . const
   92           | . variable
   93 const: . INTEGER
   94      | . REALNUMBER
   95      | . STRING
   96      | . TRUE
   97      | . FALSE
   98 variable: . var_exp
  100         | . ID "(" $@9 call_param ")"
  102         | . ID "(" $@10 ")"
  103 var_exp: . ID
  105        | . ID $@11 "." accessfield
  107        | . ID $@12 "[" expression "]"

    ID          shift, and go to state 65
    "&"         shift, and go to state 66
    "@"         shift, and go to state 67
    "("         shift, and go to state 68
    "!"         shift, and go to state 69
    INTEGER     shift, and go to state 70
    REALNUMBER  shift, and go to state 71
    STRING      shift, and go to state 72
    TRUE        shift, and go to state 73
    FALSE       shift, and go to state 74

    expression  go to state 75
    const       go to state 76
    variable    go to state 77
    var_exp     go to state 78


State 45

   19 body: "{" bloc . "}"

    "}"  shift, and go to state 79


State 46

   20 bloc: . statement bloc
   20     | statement . bloc
   21     | . %empty  ["}"]
   22 statement: . declare ";"
   24          | . STRUCTTYPEDECLARE ID $@2 "{" struct_fields "}" ";"
   25          | . assign ";"
   26          | . LOOP "(" expression ")" "{" bloc "}"
   27          | . LOOP "(" assign ";" expression ";" assign ")" "{" bloc "}"
   28          | . LOOP "(" init_declare ";" expression ";" assign ")" "{" bloc "}"
   29          | . ifstmt
   30          | . ifstmt elsestmt
   31          | . ifstmt elifstmt
   32          | . ifstmt elifstmt elsestmt
   33          | . RETURN expression ";"
   35          | . ID "(" $@3 ")" ";"
   37          | . ID "(" $@4 call_param ")" ";"
   39          | . READ "(" ID $@5 ")" ";"
   40          | . WRITE "(" expression ")" ";"
   41 type_declare: . NUMBERDECLARE
   42             | . STRINGDECLARE
   43             | . CONSTDECLARE NUMBERDECLARE
   44             | . CONSTDECLARE STRINGDECLARE
   45             | . BOOLEENDECLARE
   46             | . POINTERDECLARE
   47             | . TABLEDECLARE
   48             | . STRUCTDECLARE
   49 just_declare: . type_declare ID
   50 init_declare: . just_declare ASSIGNMENT expression
   51 declare: . just_declare
   52        | . init_declare
   57 assign: . var ASSIGNMENT expression
   59       | . ID $@7 "[" expression "]" ASSIGNMENT expression
   60       | . "&" var ASSIGNMENT expression
   61       | . "@" var ASSIGNMENT expression
   62 ifstmt: . IF "(" expression ")" body
   70 var: . ID
   72    | . ID $@8 "." accessfield

    LOOP               shift, and go to state 36
    IF                 shift, and go to state 37
    READ               shift, and go to state 38
    WRITE              shift, and go to state 39
    ID                 shift, and go to state 40
    NUMBERDECLARE      shift, and go to state 16
    STRINGDECLARE      shift, and go to state 17
    CONSTDECLARE       shift, and go to state 18
    BOOLEENDECLARE     shift, and go to state 19
    STRUCTTYPEDECLARE  shift, and go to state 41
    STRUCTDECLARE      shift, and go to state 20
    TABLEDECLARE       shift, and go to state 21
    POINTERDECLARE     shift, and go to state 22
    "&"                shift, and go to state 42
    "@"                shift, and go to state 43
    RETURN             shift, and go to state 44

    $default  reduce using rule 21 (bloc)

    bloc          go to state 80
    statement     go to state 46
    type_declare  go to state 47
    just_declare  go to state 48
    init_declare  go to state 49
    declare       go to state 50
    assign        go to state 51
    ifstmt        go to state 52
    var           go to state 53


State 47

   49 just_declare: type_declare . ID

    ID  shift, and go to state 81


State 48

   50 init_declare: just_declare . ASSIGNMENT expression
   51 declare: just_declare .  [";"]

    ASSIGNMENT  shift, and go to state 82

    $default  reduce using rule 51 (declare)


State 49

   52 declare: init_declare .

    $default  reduce using rule 52 (declare)


State 50

   22 statement: declare . ";"

    ";"  shift, and go to state 83


State 51

   25 statement: assign . ";"

    ";"  shift, and go to state 84


State 52

   29 statement: ifstmt .  [LOOP, IF, READ, WRITE, ID, NUMBERDECLARE, STRINGDECLARE, CONSTDECLARE, BOOLEENDECLARE, STRUCTTYPEDECLARE, STRUCTDECLARE, TABLEDECLARE, POINTERDECLARE, "&", "@", "}", RETURN]
   30          | ifstmt . elsestmt
   31          | ifstmt . elifstmt
   32          | ifstmt . elifstmt elsestmt
   63 elifstmt: . ELSE "(" expression ")" body
   64         | . elifstmt ELSE "(" expression ")" body
   65 elsestmt: . ELSE "(" ")" body

    ELSE  shift, and go to state 85

    $default  reduce using rule 29 (statement)

    elifstmt  go to state 86
    elsestmt  go to state 87


State 53

   57 assign: var . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 88


State 54

   26 statement: LOOP "(" . expression ")" "{" bloc "}"
   27          | LOOP "(" . assign ";" expression ";" assign ")" "{" bloc "}"
   28          | LOOP "(" . init_declare ";" expression ";" assign ")" "{" bloc "}"
   41 type_declare: . NUMBERDECLARE
   42             | . STRINGDECLARE
   43             | . CONSTDECLARE NUMBERDECLARE
   44             | . CONSTDECLARE STRINGDECLARE
   45             | . BOOLEENDECLARE
   46             | . POINTERDECLARE
   47             | . TABLEDECLARE
   48             | . STRUCTDECLARE
   49 just_declare: . type_declare ID
   50 init_declare: . just_declare ASSIGNMENT expression
   57 assign: . var ASSIGNMENT expression
   59       | . ID $@7 "[" expression "]" ASSIGNMENT expression
   60       | . "&" var ASSIGNMENT expression
   61       | . "@" var ASSIGNMENT expression
   70 var: . ID
   72    | . ID $@8 "." accessfield
   73 expression: . "(" expression ")"
   74           | . "!" expression
   75           | . "@" var_exp
   76           | . "&" var_exp
   77           | . expression "=" expression
   78           | . expression "!=" expression
   79           | . expression "||" expression
   80           | . expression "&&" expression
   81           | . expression "<" expression
   82           | . expression "<=" expression
   83           | . expression ">" expression
   84           | . expression ">=" expression
   85           | . expression "+" expression
   86           | . expression "-" expression
   87           | . expression "*" expression
   88           | . expression "/" expression
   89           | . expression "%" expression
   90           | . expression "^" expression
   91           | . const
   92           | . variable
   93 const: . INTEGER
   94      | . REALNUMBER
   95      | . STRING
   96      | . TRUE
   97      | . FALSE
   98 variable: . var_exp
  100         | . ID "(" $@9 call_param ")"
  102         | . ID "(" $@10 ")"
  103 var_exp: . ID
  105        | . ID $@11 "." accessfield
  107        | . ID $@12 "[" expression "]"

    ID              shift, and go to state 89
    NUMBERDECLARE   shift, and go to state 16
    STRINGDECLARE   shift, and go to state 17
    CONSTDECLARE    shift, and go to state 18
    BOOLEENDECLARE  shift, and go to state 19
    STRUCTDECLARE   shift, and go to state 20
    TABLEDECLARE    shift, and go to state 21
    POINTERDECLARE  shift, and go to state 22
    "&"             shift, and go to state 90
    "@"             shift, and go to state 91
    "("             shift, and go to state 68
    "!"             shift, and go to state 69
    INTEGER         shift, and go to state 70
    REALNUMBER      shift, and go to state 71
    STRING          shift, and go to state 72
    TRUE            shift, and go to state 73
    FALSE           shift, and go to state 74

    type_declare  go to state 47
    just_declare  go to state 92
    init_declare  go to state 93
    assign        go to state 94
    var           go to state 53
    expression    go to state 95
    const         go to state 76
    variable      go to state 77
    var_exp       go to state 78


State 55

   62 ifstmt: IF "(" . expression ")" body
   73 expression: . "(" expression ")"
   74           | . "!" expression
   75           | . "@" var_exp
   76           | . "&" var_exp
   77           | . expression "=" expression
   78           | . expression "!=" expression
   79           | . expression "||" expression
   80           | . expression "&&" expression
   81           | . expression "<" expression
   82           | . expression "<=" expression
   83           | . expression ">" expression
   84           | . expression ">=" expression
   85           | . expression "+" expression
   86           | . expression "-" expression
   87           | . expression "*" expression
   88           | . expression "/" expression
   89           | . expression "%" expression
   90           | . expression "^" expression
   91           | . const
   92           | . variable
   93 const: . INTEGER
   94      | . REALNUMBER
   95      | . STRING
   96      | . TRUE
   97      | . FALSE
   98 variable: . var_exp
  100         | . ID "(" $@9 call_param ")"
  102         | . ID "(" $@10 ")"
  103 var_exp: . ID
  105        | . ID $@11 "." accessfield
  107        | . ID $@12 "[" expression "]"

    ID          shift, and go to state 65
    "&"         shift, and go to state 66
    "@"         shift, and go to state 67
    "("         shift, and go to state 68
    "!"         shift, and go to state 69
    INTEGER     shift, and go to state 70
    REALNUMBER  shift, and go to state 71
    STRING      shift, and go to state 72
    TRUE        shift, and go to state 73
    FALSE       shift, and go to state 74

    expression  go to state 96
    const       go to state 76
    variable    go to state 77
    var_exp     go to state 78


State 56

   39 statement: READ "(" . ID $@5 ")" ";"

    ID  shift, and go to state 97


State 57

   40 statement: WRITE "(" . expression ")" ";"
   73 expression: . "(" expression ")"
   74           | . "!" expression
   75           | . "@" var_exp
   76           | . "&" var_exp
   77           | . expression "=" expression
   78           | . expression "!=" expression
   79           | . expression "||" expression
   80           | . expression "&&" expression
   81           | . expression "<" expression
   82           | . expression "<=" expression
   83           | . expression ">" expression
   84           | . expression ">=" expression
   85           | . expression "+" expression
   86           | . expression "-" expression
   87           | . expression "*" expression
   88           | . expression "/" expression
   89           | . expression "%" expression
   90           | . expression "^" expression
   91           | . const
   92           | . variable
   93 const: . INTEGER
   94      | . REALNUMBER
   95      | . STRING
   96      | . TRUE
   97      | . FALSE
   98 variable: . var_exp
  100         | . ID "(" $@9 call_param ")"
  102         | . ID "(" $@10 ")"
  103 var_exp: . ID
  105        | . ID $@11 "." accessfield
  107        | . ID $@12 "[" expression "]"

    ID          shift, and go to state 65
    "&"         shift, and go to state 66
    "@"         shift, and go to state 67
    "("         shift, and go to state 68
    "!"         shift, and go to state 69
    INTEGER     shift, and go to state 70
    REALNUMBER  shift, and go to state 71
    STRING      shift, and go to state 72
    TRUE        shift, and go to state 73
    FALSE       shift, and go to state 74

    expression  go to state 98
    const       go to state 76
    variable    go to state 77
    var_exp     go to state 78


State 58

   34 $@3: . %empty  [")"]
   35 statement: ID "(" . $@3 ")" ";"
   36 $@4: . %empty  [ID, "&", "@", "(", "!", INTEGER, REALNUMBER, STRING, TRUE, FALSE]
   37 statement: ID "(" . $@4 call_param ")" ";"

    ")"       reduce using rule 34 ($@3)
    $default  reduce using rule 36 ($@4)

    $@3  go to state 99
    $@4  go to state 100


State 59

   59 assign: ID $@7 . "[" expression "]" ASSIGNMENT expression

    "["  shift, and go to state 101


State 60

   72 var: ID $@8 . "." accessfield

    "."  shift, and go to state 102


State 61

   23 $@2: . %empty
   24 statement: STRUCTTYPEDECLARE ID . $@2 "{" struct_fields "}" ";"

    $default  reduce using rule 23 ($@2)

    $@2  go to state 103


State 62

   70 var: ID .  [ASSIGNMENT]
   71 $@8: . %empty  ["."]
   72 var: ID . $@8 "." accessfield

    "."       reduce using rule 71 ($@8)
    $default  reduce using rule 70 (var)

    $@8  go to state 60


State 63

   60 assign: "&" var . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 104


State 64

   61 assign: "@" var . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 105


State 65

  100 variable: ID . "(" $@9 call_param ")"
  102         | ID . "(" $@10 ")"
  103 var_exp: ID .  [")", "]", "=", "!=", "&&", "||", "<", ">", "<=", ">=", "+", "-", "*", "/", "%", "^", ",", ";"]
  104 $@11: . %empty  ["."]
  105 var_exp: ID . $@11 "." accessfield
  106 $@12: . %empty  ["["]
  107 var_exp: ID . $@12 "[" expression "]"

    "("  shift, and go to state 106

    "["       reduce using rule 106 ($@12)
    "."       reduce using rule 104 ($@11)
    $default  reduce using rule 103 (var_exp)

    $@11  go to state 107
    $@12  go to state 108


State 66

   76 expression: "&" . var_exp
  103 var_exp: . ID
  105        | . ID $@11 "." accessfield
  107        | . ID $@12 "[" expression "]"

    ID  shift, and go to state 109

    var_exp  go to state 110


State 67

   75 expression: "@" . var_exp
  103 var_exp: . ID
  105        | . ID $@11 "." accessfield
  107        | . ID $@12 "[" expression "]"

    ID  shift, and go to state 109

    var_exp  go to state 111


State 68

   73 expression: . "(" expression ")"
   73           | "(" . expression ")"
   74           | . "!" expression
   75           | . "@" var_exp
   76           | . "&" var_exp
   77           | . expression "=" expression
   78           | . expression "!=" expression
   79           | . expression "||" expression
   80           | . expression "&&" expression
   81           | . expression "<" expression
   82           | . expression "<=" expression
   83           | . expression ">" expression
   84           | . expression ">=" expression
   85           | . expression "+" expression
   86           | . expression "-" expression
   87           | . expression "*" expression
   88           | . expression "/" expression
   89           | . expression "%" expression
   90           | . expression "^" expression
   91           | . const
   92           | . variable
   93 const: . INTEGER
   94      | . REALNUMBER
   95      | . STRING
   96      | . TRUE
   97      | . FALSE
   98 variable: . var_exp
  100         | . ID "(" $@9 call_param ")"
  102         | . ID "(" $@10 ")"
  103 var_exp: . ID
  105        | . ID $@11 "." accessfield
  107        | . ID $@12 "[" expression "]"

    ID          shift, and go to state 65
    "&"         shift, and go to state 66
    "@"         shift, and go to state 67
    "("         shift, and go to state 68
    "!"         shift, and go to state 69
    INTEGER     shift, and go to state 70
    REALNUMBER  shift, and go to state 71
    STRING      shift, and go to state 72
    TRUE        shift, and go to state 73
    FALSE       shift, and go to state 74

    expression  go to state 112
    const       go to state 76
    variable    go to state 77
    var_exp     go to state 78


State 69
